QjackCtl - JACK Audio Connection Kit Qt GUI Interface
-----------------------------------------------------

ChangeLog

SVN TRUNK

- As a workaround regarding issues switching jack2's backends,
  Robin Gareus sends us yet another D-Bus metho slot: "preset",
  (dbus-send --system / org.rncbc.qjackctl.preset string:PRESET).
  Thanks again.

- Another D-Bus interface slot makes it through implementation:
  "quit" (eg. usage: dbus-send --system / org.rncbc.qjackctl.quit).
  Besides, there's also these new JACK session management actions
  which were being overlooked as well: "load", "save", "savequit"
  and "savetemplate" are also available as D-Bus method slots.

- Make sure that Patchbay socket names are unique when adding
  or copying, fixing previous patch by Dominic Sacre.

- JACK version is now being shown on the About box (jack2).

- Slight Connections widget behavioral change: (dis)connecting a
  client (from) to one single port, (dis)connections will be
  applied in sequence from (to) all client output ports to (from)
  as many input ports there are in below, one by one (satisfying
  a 5 year old request from Yann Orlarey, thanks:).

- JACK session support is being introduced. (EXPERIMENTAL)

- Ignore first XRUN occurrence option dropped from statistics.

- Initial widget geometry and visibility persistence logic has
  been slightly revised as much to avoid crash failures due to
  wrong main widget hidden state.

- Double-quotes are now being added to device names which include
  blank characters and were rendering invalid all command line
  invocation of the classic JACK server (eg. specially due for
  Portaudio device names on Windows).
  
- Transport play (rolling) status is now being guarded to avoid
  backfiring from extraneous transport state changes.

- General source tree layout and build configuration change.

- Italian (it) translation added (by Sergio Atzori).

- Post-shutdown script invocation logic slightly refactored in