@@ -157,7 +157,7 @@
         </layout>
        </item>
        <item>
-        <widget class="QGroupBox" name="ServerDriverGroupBox" >
+		<widget class="QGroupBox" name="ServerGroupBox" >
          <property name="font" >
           <font>
            <weight>75</weight>
@@ -177,8 +177,8 @@
           <property name="spacing" >
            <number>4</number>
           </property>
-          <item>
-           <widget class="QLabel" name="ServerTextLabel" >
+		  <item>
+		   <widget class="QLabel" name="ServerTextLabel" >
             <property name="font" >
              <font>
               <weight>50</weight>
@@ -186,21 +186,18 @@
              </font>
             </property>
             <property name="text" >
-             <string>Server &amp;Path:</string>
-            </property>
-            <property name="alignment" >
-             <set>Qt::AlignVCenter</set>
+			 <string>Server &amp;Path:</string>
             </property>
             <property name="wordWrap" >
              <bool>false</bool>
             </property>
             <property name="buddy" >
-             <cstring>ServerComboBox</cstring>
+			 <cstring>ServerComboBox</cstring>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QComboBox" name="ServerComboBox" >
+		   <widget class="QComboBox" name="ServerComboBox" >
             <property name="sizePolicy" >
              <sizepolicy>
               <hsizetype>7</hsizetype>
@@ -238,7 +235,50 @@
             </item>
            </widget>
           </item>
-          <item>
+		  <item>
+		   <widget class="QLabel" name="ServerNameTextLabel" >
+			<property name="font" >
+			 <font>
+			  <weight>50</weight>
+			  <bold>false</bold>
+			 </font>
+			</property>
+			<property name="text" >
+			 <string>&amp;Name:</string>
+			</property>
+			<property name="alignment" >
+			 <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+			</property>
+			<property name="wordWrap" >
+			 <bool>false</bool>
+			</property>
+			<property name="buddy" >
+			 <cstring>ServerNameComboBox</cstring>
+			</property>
+		   </widget>
+		  </item>
+		  <item>
+		   <widget class="QComboBox" name="ServerNameComboBox" >
+			<property name="font" >
+			 <font>
+			  <weight>50</weight>
+			  <bold>false</bold>
+			 </font>
+			</property>
+			<property name="toolTip" >
+			 <string>The JACK Audio Connection Kit sound server name</string>
+			</property>
+			<property name="editable" >
+			 <bool>true</bool>
+			</property>
+			<item>
+			 <property name="text" >
+			  <string>(default)</string>
+			 </property>
+			</item>
+		   </widget>
+		  </item>
+		  <item>
            <widget class="QLabel" name="DriverTextLabel" >
             <property name="font" >
              <font>
@@ -4329,6 +4369,7 @@
   <tabstop>PresetSavePushButton</tabstop>
   <tabstop>PresetDeletePushButton</tabstop>
   <tabstop>ServerComboBox</tabstop>
+  <tabstop>ServerNameComboBox</tabstop>
   <tabstop>DriverComboBox</tabstop>
   <tabstop>RealtimeCheckBox</tabstop>
   <tabstop>NoMemLockCheckBox</tabstop>
